[gd_scene load_steps=27 format=3 uid="uid://brs3why3rugsi"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_scd23"]
[ext_resource type="AudioStream" uid="uid://c08t1jheoq12k" path="res://assets/sound/bubbles.mp3" id="2_05a8e"]
[ext_resource type="AudioStream" uid="uid://dnp6s7u0gu8rc" path="res://assets/sound/pop.mp3" id="2_mso6s"]
[ext_resource type="Script" path="res://scenes/camera_mount.gd" id="3_lul7u"]
[ext_resource type="Material" uid="uid://cpqrd0jhqcnfe" path="res://particles/bubble_particles.tres" id="4_g7o3v"]
[ext_resource type="AudioStream" uid="uid://evbgf785fj5w" path="res://assets/sound/success.mp3" id="4_vxola"]
[ext_resource type="Material" uid="uid://yq2ywrvw8k7y" path="res://materials/ship_blue.tres" id="8_5sakl"]

[sub_resource type="CylinderMesh" id="CylinderMesh_6iyt0"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sg736"]
height = 1.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bc2uk"]
height = 0.71
radius = 0.21

[sub_resource type="SphereShape3D" id="SphereShape3D_i81y8"]
radius = 0.21

[sub_resource type="CylinderMesh" id="CylinderMesh_60h71"]
material = ExtResource("8_5sakl")
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_w3dbl"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_yb2x7"]
top_radius = 0.15
bottom_radius = 0.15
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_ak0p8"]
material = ExtResource("8_5sakl")
top_radius = 0.0
bottom_radius = 0.15
height = 0.25

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_is62b"]
lifetime_randomness = 0.2
particle_flag_rotate_y = true
emission_shape = 1
emission_sphere_radius = 0.2
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, -1, 0)
spread = 15.0
initial_velocity_min = 2.0
initial_velocity_max = 3.0
gravity = Vector3(0, -0.5, 0)
scale_min = 0.1
scale_max = 0.3
color = Color(0.229069, 0.508497, 0.766997, 1)
turbulence_enabled = true
turbulence_noise_strength = 0.2
turbulence_noise_scale = 2.0
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_kkyn6"]
material = ExtResource("4_g7o3v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2kl54"]
emission_shape = 1
emission_sphere_radius = 0.5
angle_min = 1.07288e-05
angle_max = 353.1
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 8.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
gravity = Vector3(0, -0.5, 0)
scale_min = 0.3
scale_max = 1.2
turbulence_enabled = true
turbulence_noise_strength = 0.5
turbulence_noise_scale = 2.0
collision_mode = 1
collision_friction = 0.3
collision_bounce = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_ng0vx"]
material = ExtResource("4_g7o3v")

[sub_resource type="Gradient" id="Gradient_veyk7"]
offsets = PackedFloat32Array(0.00414938, 0.060166, 0.948133, 0.987552)
colors = PackedColorArray(0.3, 0.3, 1, 0, 1, 0.136807, 0.812017, 1, 0.887708, 0.862048, 0, 1, 0.3, 0.5, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fvel2"]
gradient = SubResource("Gradient_veyk7")

[sub_resource type="Curve" id="Curve_t8owi"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.314815, 1), -0.0754285, -0.0754285, 0, 0, Vector2(0.842593, 0.973569), -0.150962, -0.150962, 0, 0, Vector2(1, 0.0179856), -5.90124, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_hkuig"]
curve = SubResource("Curve_t8owi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vrcvt"]
lifetime_randomness = 0.33
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3(0, 1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 3.0
gravity = Vector3(0, -0.5, 0)
scale_curve = SubResource("CurveTexture_hkuig")
color_ramp = SubResource("GradientTexture1D_fvel2")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_82jvj"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.7)

[sub_resource type="SphereMesh" id="SphereMesh_ifw7w"]
material = SubResource("StandardMaterial3D_82jvj")
radius = 0.4
height = 0.8

[node name="Player" type="RigidBody3D" node_paths=PackedStringArray("booster_particles", "right_booster_particles", "left_booster_particles", "explosion_particles", "success_particles", "explosion_sound", "success_sound", "bubbles_sound")]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_scd23")
critical_tipping_angle = 53.156
booster_particles = NodePath("BoosterBubblesCenter")
right_booster_particles = NodePath("BoosterBubblesRight")
left_booster_particles = NodePath("BoosterBubblesLeft")
explosion_particles = NodePath("ExplosionBubbles")
success_particles = NodePath("SuccessBubbles")
explosion_sound = NodePath("PopAudio")
success_sound = NodePath("SuccessAudio")
bubbles_sound = NodePath("BubblesAudio")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_6iyt0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.603185, 0)
shape = SubResource("CylinderShape3D_sg736")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.360569, 0)
shape = SubResource("CylinderShape3D_bc2uk")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.805031, 0)
shape = SubResource("SphereShape3D_i81y8")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
mesh = SubResource("CylinderMesh_60h71")

[node name="CockpitMesh" type="MeshInstance3D" parent="BodyMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_w3dbl")
skeleton = NodePath("../..")

[node name="BoosterMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.349935, -0.748604, 0)
mesh = SubResource("CylinderMesh_yb2x7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoosterMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.62, 0)
mesh = SubResource("CylinderMesh_ak0p8")

[node name="BoosterMesh2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.352285, -0.748604, 0)
mesh = SubResource("CylinderMesh_yb2x7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoosterMesh2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.62, 0)
mesh = SubResource("CylinderMesh_ak0p8")

[node name="CameraMount" type="Node3D" parent="."]
script = ExtResource("3_lul7u")
smoothing_speed = 5.0

[node name="SpringArm3D" type="SpringArm3D" parent="CameraMount"]

[node name="Camera3D" type="Camera3D" parent="CameraMount/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 7.53, 12.73)

[node name="BoosterBubblesCenter" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.08897, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_is62b")
draw_pass_1 = SubResource("SphereMesh_kkyn6")

[node name="BoosterBubblesRight" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.39967, -1.3866, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_is62b")
draw_pass_1 = SubResource("SphereMesh_kkyn6")

[node name="BoosterBubblesLeft" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.356287, -1.38724, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_is62b")
draw_pass_1 = SubResource("SphereMesh_kkyn6")

[node name="ExplosionBubbles" type="GPUParticles3D" parent="."]
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_2kl54")
draw_pass_1 = SubResource("SphereMesh_ng0vx")

[node name="SuccessBubbles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.276196, 0)
emitting = false
amount = 33
lifetime = 2.0
one_shot = true
explosiveness = 0.85
randomness = 0.59
trail_lifetime = 2.33
process_material = SubResource("ParticleProcessMaterial_vrcvt")
draw_pass_1 = SubResource("SphereMesh_ifw7w")

[node name="BubblesAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_05a8e")

[node name="SuccessAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_vxola")

[node name="PopAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_mso6s")
volume_db = 5.162

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
